added block 'events'

--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,5 +1,6 @@
 .page {
   scroll-behavior: smooth;
+
   &__body {
     &--with-menu {
       overflow: hidden;
@@ -43,6 +44,39 @@
       right: 0;
       height: 100vh;
       background-color: rgba(0, 0, 0, 0.5);
+    }
+  }
+
+  &__section {
+    margin-bottom: 60px;
+
+    @include onTablet {
+      margin-bottom: 112px;
+    }
+
+    @include onDesktop {
+      margin-bottom: 104px;
+    }
+
+    &-title {
+      margin-bottom: 40px;
+
+      font-family: "Montserrat", sans-serif;
+      font-weight: 700;
+      font-size: 36px;
+      line-height: 100%;
+      text-align: center;
+
+      @include onTablet {
+        margin-bottom: 48px;
+
+        text-align: left;
+        font-size: 48px;
+      }
+
+      @include onDesktop {
+        margin-bottom: 56px;
+      }
     }
   }
 }
