--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,7 @@
 @import "./utils/typography";
 @import "./utils/mixins";
 @import "./utils/extends";
+@import "./utils/loops";
 
 @import "./blocks/icon.scss";
 @import "./blocks/information.scss";
@@ -16,3 +17,4 @@
 @import "./blocks/art-museum.scss";
 @import "./blocks/button.scss";
 @import "./blocks/menu.scss";
+@import "./blocks/events.scss";
