--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,3 +1,6 @@
 $black-text-color:#0f0e08;
 $green-button-color:#1a5a4c;
 $white-text-color: #fff;
+$grey-text-color: #687480;
+$grey-second-text-color: #4e4e4e;
+$red-square-color: #f14a27;
