--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -13,12 +13,12 @@
   // overflow-y: auto;
 
   @include onTablet {
-    padding: 40px 35px;
+    padding: 42px 100px 42px 202px;
     height: 233px;
   }
 
   @include onDesktop {
-    padding: 40px 55px;
+    padding: 45px 107px;
     height: 233px;
   }
 
@@ -29,7 +29,7 @@
 
   &__container {
     margin: 0;
-    padding: 0;
+    padding: 0 40px;
     margin-left: 33px;
 
     @include onTablet {
