--- a/src/styles/blocks/picslider.scss
+++ b/src/styles/blocks/picslider.scss
@@ -10,8 +10,11 @@
     top: -60px;
     width: calc(100vw - 60px);
 
+
     @include onTablet {
       height: 550px;
+      width: 770px;
+
     }
   }
 
@@ -21,10 +24,12 @@
     overflow: hidden;
     position: relative;
     width: inherit;
+
   }
 
   &__wrapper > input {
     display: none;
+
   }
 
   &__slide1 {
