--- a/src/styles/blocks/_contacts.scss
+++ b/src/styles/blocks/_contacts.scss
@@ -20,9 +20,19 @@
   }
 
   &__text {
+    display: block;
     text-decoration: none;
     line-height: 150%;
     color: $colorBlack;
+
+    &--hover {
+      cursor: pointer;
+      transition: color 0.3s;
+
+      &:hover {
+        color: $colorGreen;
+      }
+    }
   }
 
   &__title {
@@ -80,6 +90,12 @@
     height: 50px;
     border-radius: 50%;
     border: 1px solid $colorGreen;
+    transition: all 0.3s;
+
+    &:hover {
+      background-color: #ccc3c3;
+      transform: scale(0.95);
+    }
 
     @include onTablet {
       display: none;
