--- a/src/styles/blocks/_title.scss
+++ b/src/styles/blocks/_title.scss
@@ -89,6 +89,7 @@
     bottom: 280px;
     display: none;
     transform: rotate(-90deg);
+    transition: transform 0.3s;
 
     &:hover {
       transform: rotate(-90deg) scale(1.5, 1.5);
