--- a/src/styles/blocks/_gallery.scss
+++ b/src/styles/blocks/_gallery.scss
@@ -50,7 +50,7 @@
     transition: transform 0.3s;
 
     &:hover {
-      transform: scale(1.1, 1.1);
+      transform: scale(1.05, 1.05);
     }
 
     @include onTablet {
@@ -88,7 +88,7 @@
     display: block;
     width: 100%;
     height: 100%;
-    object-fit: cover;
-    object-position: center;
+    // object-fit: cover;
+    // object-position: center;
   }
 }
