--- a/src/styles/blocks/_contacts.scss
+++ b/src/styles/blocks/_contacts.scss
@@ -30,7 +30,7 @@
       transition: color 0.3s;
 
       &:hover {
-        color: $colorGreen;
+        color: $colorRed;
       }
     }
   }
@@ -143,11 +143,31 @@
     font-weight: 700;
     font-size: 36px;
     line-height: 100%;
+    transition: color 0.3s;
+
+    &:hover {
+      color: $colorRed;
+    }
   }
 
   &__icons-social {
     display: flex;
+    align-items: center;
     gap: 26px;
+  }
+
+  &__icons-image {
+    display: block;
+
+    path {
+      transition: fill 0.3s;
+    }
+
+    &:hover {
+      path {
+        fill: $colorRed;
+      }
+    }
   }
 
   &__icons-icon {
