--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -2,18 +2,19 @@
   margin: 0 auto;
 
   @include onTablet {
-    max-width: 768px;
+    min-width: 768px;
+    padding: 0 0 0 34px;
   }
 
   @include onDesktop {
     margin: 0 0 0 60px;
-    max-width: 1280px;
+    min-width: 1280px;
     padding: 0 $padding-desktop;
   }
 
   @include ondesing {
     margin: 0 0 0 60px;
-    max-width: 1440px;
+    min-width: 1440px;
     padding: 0;
   }
 
