--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -84,6 +84,13 @@
     font-size: 16px;
     line-height: 150%;
     color: #4e4e4e;
+
+    @include onTablet {
+      margin: 0 274px 0 0;
+    }
+    @include onDesktop {
+      margin: 0 55px 0 0;
+    }
   }
 
   &__lecture {
