header image broken

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -19,17 +19,17 @@
     margin-bottom: 100px;
     margin-left: 63%;
     padding: 20px 0;
-
     background-image: url(../images/photo/museum690.png);
+    // background-position: top left;
   }
 
   @include onDesktop {
     width: 720px;
     height: 650px;
 
-    margin-left: 50%;
+    margin-left: 33%;
     margin-bottom: 200px;
-
     background-image: url(../images/photo/museum1170.png);
+    // background-position: top left;
   }
 }
