--- a/src/styles/blocks/swiper.scss
+++ b/src/styles/blocks/swiper.scss
@@ -1,4 +1,16 @@
 .swiper {
+  width: 100%;
+  padding: 88px 20px;
+  margin-bottom: 100px;
+
+  &-wrapper {
+    gap: 30px;
+  }
+
+  &-slide {
+    // width: 280px;
+    height: 410px;
+  }
 
   &-pagination {
     width: 102px;
