--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -10,7 +10,7 @@
 
     @include tablet {
       margin-bottom: 48px;
-      font-size: 48px;
+      font-size: $size-title;
       text-align: left;
     }
 
