--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -36,5 +36,17 @@
     }
   }
 
+  &__footer {
+    padding: 50px 20px 56px;
+
+    @include tablet {
+      padding: 51px 34px 36px;
+    }
+
+    @include desktop {
+      padding: 48px 55px 35px;
+    }
+  }
+
   font-family: $font-main;
 }
