--- a/src/styles/blocks.scss
+++ b/src/styles/blocks.scss
@@ -6,3 +6,5 @@
 @import "blocks/lecture.scss";
 @import "blocks/gallery.scss";
 @import "blocks/slider.scss";
+@import "blocks/subscription.scss";
+@import "blocks/footer.scss";
