--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -11,7 +11,7 @@
 
     @include tablet {
       margin-bottom: 48px;
-      font-size: 48px;
+      font-size: $size-title;
       text-align: left;
     }
 
