--- a/src/styles/blocks/art-museum.scss
+++ b/src/styles/blocks/art-museum.scss
@@ -63,4 +63,35 @@
     color: $black-text-color;
     text-transform: uppercase;
   }
+
+  &__detail {
+    position: absolute;
+    left: 0;
+    bottom: 60px;
+
+    display: none;
+    align-items: center;
+    gap: 0 20px;
+    width: 133px;
+    transform: rotate(0.75turn);
+
+    @include onDesktop {
+      display: flex;
+    }
+  }
+
+  &__line {
+    height: 1px;
+    width: 100%;
+    background-color: $green-button-color;
+  }
+
+  &__detail-text {
+    font-family: "IBM Plex Sans", sans-serif;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 100%;
+    text-transform: uppercase;
+    color: $grey-text-color;
+  }
 }
