--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -27,13 +27,14 @@
   &__image {
     display: block;
     height: 210px;
+    margin: 0 auto;
 
     @include onTablet {
       height: 520px;
     }
 
     @include onDesktop {
-      width: 670px;
+      width: 100%;
     }
   }
 
@@ -51,6 +52,7 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 10px;
+    width: 280px;
 
     font-family: "IBM Plex Sans", sans-serif;
     font-weight: 500;
