--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,4 +1,10 @@
 .header {
+  &__container {
+    @include onDesktop {
+      height: 655px;
+    }
+  }
+
   &__content {
     @include onTablet {
       display: flex;
@@ -68,6 +74,7 @@
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
+    cursor: pointer;
 
     @include onTablet {
       top: 15px;
