--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -9,6 +9,11 @@
         display: none;
         position: static;
       }
+
+      .events__photo {
+        position: relative;
+        z-index: -10;
+      }
     }
   }
 
@@ -44,6 +49,7 @@
       right: 0;
       height: 100vh;
       background-color: rgba(0, 0, 0, 0.5);
+      z-index: 2;
     }
   }
 
@@ -56,6 +62,18 @@
 
     @include onDesktop {
       margin-bottom: 104px;
+    }
+
+    &:nth-of-type(2) {
+      margin-bottom: 43px;
+
+      @include onTablet {
+        margin-bottom: 4px;
+      }
+
+      @include onDesktop {
+        margin-bottom: 96px;
+      }
     }
 
     &-title {
