--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -18,3 +18,4 @@
 @import "./blocks/button.scss";
 @import "./blocks/menu.scss";
 @import "./blocks/events.scss";
+@import "./blocks/classic-romane.scss";
