--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -1,13 +1,32 @@
 .footer {
+  &__grid {
+    margin-bottom: 80px;
+
+    @include tablet {
+      display: grid;
+      grid-template-columns: 120px 1fr 120px;
+      margin-bottom: 120px;
+    }
+  
+    @include desktop {
+      grid-template-columns: repeat(12, 1fr);
+      column-gap: 30px;
+      margin-bottom: 87px;
+    }
+  }
+
   &__top {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 40px;
 
     @include tablet {
+      grid-column: 1 / 2;
       justify-content: flex-start;
       flex-direction: column;
       align-items: flex-start;
+      margin-bottom: 0;
     }
   }
 
@@ -31,6 +50,11 @@
 
   &__socials {
     display: flex;
+
+    @include desktop {
+      justify-content: space-between;
+      width: 100%;
+    }
   }
 
   &__icon {
@@ -46,12 +70,123 @@
       }
 
       @include desktop {
-        margin-right: 22px;
+        margin-right: 0;
       }
     }
 
     &--instagram {
       background: no-repeat center url("../images/icons/instagram.svg");
+    }
+  }
+
+  &__middle {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 20px;
+    font-size: $size-main;
+    line-height: $lineheight-bigger;
+    font-weight: $weight-main;
+    color: $color-main;
+
+    @include tablet {
+      grid-column: 2 / 3;
+      margin-bottom: 64px;
+    }
+
+    @include desktop {
+      grid-column: 3 / 7;
+      column-gap: 30px;
+      margin-bottom: 0;
+    }
+  }
+  
+  &__subtitle {
+    margin-bottom: 20px;
+    line-height: 20px;
+  }
+
+  &__time {
+    font-weight: $weight-major;
+  }
+
+  &__button-container {
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 20px;
+
+    @include tablet {
+      display: none;
+    }
+  }
+
+  &__button {
+    position: relative;
+    width: 50px;
+    height: 50px;
+    border: 1px solid $color-green;
+    border-radius: 50%;
+  }
+
+  &__arrow {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  &__line {
+    margin-bottom: 40px;
+    width: 100%;
+    height: 1px;
+    background: $color-green;
+    opacity: 0.5;
+
+    @include tablet {
+      grid-column: 2 / 3;
+      margin-bottom: 64px;
+    }
+
+    @include desktop {
+      grid-column: 7 / 8;
+      justify-self: center;
+      margin-bottom: 0;
+      width: 1px;
+      height: 100%;
+    }
+  }
+
+  &__nav {
+    @include tablet {
+      grid-column: 2 / 3;
+    }
+
+    @include desktop {
+      grid-column: 8 / 12;
+    }
+  }
+
+  &__copyright {
+    @include tablet {
+      display: flex;
+      flex-direction: row-reverse;
+      justify-content: space-between;
+    }
+  }
+
+  &__copyright-text {
+    margin-bottom: 10px;
+    font-weight: $weight-light;
+    font-size: 12px;
+    line-height: 17px;
+    text-align: center;
+    color: $color-main;
+
+    &:last-child {
+      margin-bottom: 0;
+    }
+
+    @include tablet {
+      margin-bottom: 0;
     }
   }
 }
