--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -11,6 +11,14 @@
     @include desktop {
       gap: 30px 31px;
     }
+
+    &--footer {
+      gap: 20px;
+
+      @include desktop {
+        column-gap: 30px;
+      }
+    }
   }
 
   &__item {
@@ -18,6 +26,10 @@
 
     @include desktop {
       width: 168px;
+    }
+
+    &--footer {
+      width: 100%;
     }
   }
 
@@ -30,6 +42,12 @@
 
     @include desktop {
       font-size: 22px;
+    }
+
+    &--footer {
+      font-size: $size-main;
+      font-weight: $weight-main;
+      color: $color-main;
     }
   }
 }
