--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -48,6 +48,7 @@
   &__image {
     margin-bottom: 20px;
     width: 100%;
+    transition: transform $transition;
 
     @include tablet {
       margin-bottom: 44px;
@@ -56,6 +57,10 @@
     @include desktop {
       grid-column: 1 / 8;
       margin-bottom: 0;
+    }
+
+    &:hover {
+      transform: scale(1.1);
     }
   }
 
