--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -43,6 +43,7 @@
   &__image {
     width: 100%;
     height: 100%;
+    transition: transform $transition;
 
     &--1 {
       grid-column: 1 / 5;
@@ -58,6 +59,10 @@
 
     &--4 {
       grid-column: 9 / 13;
+    }
+
+    &:hover {
+      transform: scale(1.1);
     }
   }
 }
