--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -38,6 +38,11 @@
   &__image {
     width: 100%;
     height: 100%;
+    transition: transform $transition;
+
+    &:hover {
+      transform: scale(1.1);
+    }
   }
 
   &__pagination {
