--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -2,13 +2,13 @@
   margin: 0 auto;
 
   @include onTablet {
-    min-width: 768px;
+    max-width: 1280px;
     padding: 0 0 0 34px;
   }
 
   @include onDesktop {
     margin: 0 0 0 60px;
-    min-width: 1280px;
+    max-width: 1440px;
     padding: 0 $padding-desktop;
   }
 
@@ -23,6 +23,7 @@
   }
 
   &--mob {
-    padding: 0 20px;
+    padding-left: 20px;
   }
+
 }
