--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -1,9 +1,8 @@
 .events {
   &__tags {
-    @include onDesktop {
-      display: flex;
-    }
+    display: block;
   }
+
 
   &__type {
     display: inline-block;
@@ -32,9 +31,6 @@
     margin-bottom: 10px;
 
     @include onTablet {
-      margin-bottom: 30px;
-    }
-    @include onDesktop {
       margin-bottom: 30px;
     }
   }
