--- a/src/styles/blocks/lecture.scss
+++ b/src/styles/blocks/lecture.scss
@@ -18,6 +18,36 @@
     }
   }
 
+  &__type {
+    display: inline-block;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 150%;
+    color: #687480;
+    text-transform: uppercase;
+    padding-right: 25px;
+
+    @include onTablet {
+      font-size: 14px;
+      padding-right: 30px;
+    }
+    @include onDesktop {
+      font-size: 14px;
+    }
+  }
+
+  &__date {
+    display: inline-block;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 150%;
+    color: $color-main;
+    margin-bottom: 10px;
+
+    @include onTablet {
+      margin-bottom: 30px;
+    }
+  }
   &__photo-container {
     overflow: hidden;
   }
@@ -54,7 +84,6 @@
     box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
 
     @include onTablet {
-      text-align: left;
       top: -100px;
       padding: 45px 50px;
       margin: 0 60px;
