--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,13 @@
-$c-gray: #eee;
+$border-color: #1a5a4c;
+$text-color: #0f0e08;
+$text-color-2: #687480;
+$text-color-3: #4e4e4e;
+$text-color-4: #fff;
+$color-black: #000;
+$dot-color: #e0e0e0;
+$button-bgc: #e5e5e5;
+$button-bgc-red: #f14a27;
+$transition-time: 0.3s;
+$grid-mobile: 2;
+$grid-tablet: 6;
+$grid-desctop: 12;
