add hover effects

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -38,6 +38,7 @@
     font-weight: $weight-bold;
     color: $color-main;
     text-align: center;
+    transition: color $transition;
 
     @include tablet {
       margin-bottom: 62px;
@@ -45,6 +46,10 @@
       font-size: $size-subtitle;
       line-height: $lineheight-smaller;
       text-align: left;
+    }
+
+    &:hover {
+      color: $color-hover-main;
     }
   }
 
@@ -60,6 +65,7 @@
   &__icon {
     width: 24px;
     height: 24px;
+    transition: background-image $transition;
 
     &--facebook {
       background: no-repeat center url("../images/icons/facebook.svg");
@@ -72,10 +78,18 @@
       @include desktop {
         margin-right: 0;
       }
+
+      &:hover {
+        background-image: url("../images/icons/facebook-hover.svg");
+      }
     }
 
     &--instagram {
       background: no-repeat center url("../images/icons/instagram.svg");
+
+      &:hover {
+        background-image: url("../images/icons/instagram-hover.svg");
+      }
     }
   }
 
@@ -107,6 +121,15 @@
 
   &__time {
     font-weight: $weight-major;
+  }
+
+  &__link {
+    color: $color-main;
+    transition: color $transition;
+
+    &:hover {
+      color: $color-hover-main;
+    }
   }
 
   &__button-container {
