--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -39,15 +39,24 @@
     line-height: $lineheight-smaller;
     font-weight: $weight-medium;
     color: $color-white;
+    transition: color $transition;
 
     @include desktop {
       font-size: 22px;
+    }
+
+    &:hover {
+      color: $color-hover-white;
     }
 
     &--footer {
       font-size: $size-main;
       font-weight: $weight-main;
       color: $color-main;
+
+      &:hover {
+        color: $color-hover-main;
+      }
     }
   }
 }
