--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,11 +1,15 @@
 $font-main: 'IBM Plex Sans', Montserrat, sans-serif;
 $font-major: Montserrat, 'IBM Plex Sans', sans-serif;
 $color-main: #0f0e08;
+$color-hover-main: #023716;
 $color-gray: #687480;
 $color-dark: #4e4e4e;
 $color-green: #1a5a4c;
+$color-hover-green: #15342d;
 $color-orange: #f14a27;
+$color-hover-orange: #b02a0f;
 $color-white: #fff;
+$color-hover-white: #d6d5d5;
 $size-main: 14px;
 $size-subtitle: 36px;
 $size-title: 48px;
