--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,6 +1,4 @@
 .page {
-  position: relative;
-
   &--with-nav {
     overflow: hidden;
   }
@@ -38,6 +36,7 @@
 
   &__footer {
     padding: 50px 20px 56px;
+    padding: 50px 20px 0;
 
     @include tablet {
       padding: 51px 34px 36px;
