return previous code

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -1,6 +1,6 @@
 .footer {
   &__grid {
-    // margin-bottom: 80px;
+    margin-bottom: 80px;
 
     @include tablet {
       display: grid;
@@ -132,33 +132,32 @@
     }
   }
 
-  // &__button-container {
-  //   display: flex;
-  //   justify-content: flex-end;
-  //   margin-bottom: 20px;
+  &__button-container {
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 20px;
 
-  //   @include tablet {
-  //     display: none;
-  //   }
-  // }
+    @include tablet {
+      display: none;
+    }
+  }
 
-  // &__button {
-  //   position: relative;
-  //   width: 50px;
-  //   height: 50px;
-  //   border: 1px solid $color-green;
-  //   border-radius: 50%;
-  // }
+  &__button {
+    position: relative;
+    width: 50px;
+    height: 50px;
+    border: 1px solid $color-green;
+    border-radius: 50%;
+  }
 
-  // &__arrow {
-  //   position: absolute;
-  //   top: 50%;
-  //   left: 50%;
-  //   transform: translate(-50%, -50%);
-  // }
+  &__arrow {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
 
   &__line {
-    display: none;
     margin-bottom: 40px;
     width: 100%;
     height: 1px;
@@ -166,7 +165,6 @@
     opacity: 0.5;
 
     @include tablet {
-      display: block;
       grid-column: 2 / 3;
       margin-bottom: 64px;
     }
@@ -181,10 +179,7 @@
   }
 
   &__nav {
-    display: none;
-
     @include tablet {
-      display: block;
       grid-column: 2 / 3;
     }
 
@@ -194,8 +189,6 @@
   }
 
   &__copyright {
-    display: none;
-
     @include tablet {
       display: flex;
       flex-direction: row-reverse;
