--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -76,6 +76,18 @@
       }
     }
 
+    &:nth-of-type(3) {
+      margin-bottom: 100px;
+
+      @include onTablet {
+        margin-bottom: 92px;
+      }
+
+      @include onDesktop {
+        margin-bottom: 200px;
+      }
+    }
+
     &-title {
       margin-bottom: 40px;
 
