--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -4,3 +4,4 @@ $white-text-color: #fff;
 $grey-text-color: #687480;
 $grey-second-text-color: #4e4e4e;
 $red-square-color: #f14a27;
+$grey-button-color: #e0e0e0;
