--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -48,6 +48,8 @@
   &__image {
     margin-bottom: 20px;
     width: 100%;
+    max-height: 600px;
+    object-fit: contain;
     transition: transform $transition;
 
     @include tablet {
@@ -67,6 +69,7 @@
   &__text {
     @include desktop {
       grid-column: 9 / 13;
+      max-width: 440px;
     }
   }
 
