--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -1,7 +1,5 @@
 .footer {
   &__grid {
-    margin-bottom: 80px;
-
     @include tablet {
       display: grid;
       grid-template-columns: 120px 1fr 120px;
@@ -132,32 +130,8 @@
     }
   }
 
-  &__button-container {
-    display: flex;
-    justify-content: flex-end;
-    margin-bottom: 20px;
-
-    @include tablet {
-      display: none;
-    }
-  }
-
-  &__button {
-    position: relative;
-    width: 50px;
-    height: 50px;
-    border: 1px solid $color-green;
-    border-radius: 50%;
-  }
-
-  &__arrow {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-
   &__line {
+    display: none;
     margin-bottom: 40px;
     width: 100%;
     height: 1px;
@@ -165,6 +139,7 @@
     opacity: 0.5;
 
     @include tablet {
+      display: block;
       grid-column: 2 / 3;
       margin-bottom: 64px;
     }
@@ -179,7 +154,10 @@
   }
 
   &__nav {
+    display: none;
+
     @include tablet {
+      display: block;
       grid-column: 2 / 3;
     }
 
@@ -189,6 +167,8 @@
   }
 
   &__copyright {
+    display: none;
+
     @include tablet {
       display: flex;
       flex-direction: row-reverse;
