--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -16,7 +16,7 @@
     }
 
     @include desktop {
-      margin-bottom: 56px;
+      margin: 0 0 56px;
     }
   }
 
@@ -25,7 +25,9 @@
 
     @include desktop {
       display: block;
-      margin: 0 55px;
+      margin: 0 auto;
+      max-height: 1310px;
+      max-width: 1550px;
     }
   }
 
@@ -34,15 +36,19 @@
     grid-template-columns: repeat(12, 1fr);
     column-gap: 30px;
     margin-bottom: 30px;
+    max-height: 800px;
 
     &:nth-child(2) {
       margin-bottom: 200px;
+      max-height: 480px;
     }
   }
 
   &__image {
     width: 100%;
     height: 100%;
+    max-height: 800px;
+    object-fit: contain;
     transition: transform $transition;
 
     &--1 {
@@ -55,10 +61,12 @@
 
     &--3 {
       grid-column: 1 / 9;
+      max-height: 480px;
     }
 
     &--4 {
       grid-column: 9 / 13;
+      max-height: 480px;
     }
 
     &:hover {
