--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -5,7 +5,6 @@
 
   &__header {
     margin-bottom: 70px;
-    padding: 9px 20px 0;
 
     @include tablet {
       margin-bottom: 107px;
@@ -34,8 +33,14 @@
     }
   }
 
+  &__gallery {
+    @include desktop {
+      padding: 0 55px;
+    }
+  }
+
   &__footer {
-    padding: 50px 20px 56px;
+    padding: 50px 20px 0;
 
     @include tablet {
       padding: 51px 34px 36px;
