--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,7 +1,7 @@
 $font-main: 'IBM Plex Sans', Montserrat, sans-serif;
 $font-major: Montserrat, 'IBM Plex Sans', sans-serif;
 $color-main: #0f0e08;
-$color-hover-main: #023716;
+$color-hover-main: #015c24;
 $color-gray: #687480;
 $color-dark: #4e4e4e;
 $color-green: #1a5a4c;
