--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -17,6 +17,11 @@
     @include desktop {
       margin-bottom: 56px;
     }
+
+    @include design {
+      width: 772px;
+      margin-left: calc(((100vw - 440px) / 12 * 7 - 592px) / 2);
+    }
   }
 
   &__block {
