--- a/src/styles/block/art-museum.scss
+++ b/src/styles/block/art-museum.scss
@@ -20,9 +20,11 @@
     padding-bottom: 20px;
 
     @include onTablet {
-      font-size: 54px;
       line-height: 120%;
       text-align: left;
+      @include onTabletTitle {
+        font-size: 54px;
+      }
 
       padding-bottom: 38px;
     }
@@ -38,8 +40,13 @@
     font-weight: 700;
     font-size: 14px;
     line-height: 100%;
+    color: $text-color-2;
     text-transform: uppercase;
     transform: rotate(-90deg);
+
+    &:active {
+      color: $text-color-2;
+    }
 
     @include onDesctop {
       display: flex;
