--- a/src/styles/block/button.scss
+++ b/src/styles/block/button.scss
@@ -36,6 +36,10 @@
     color: $text-color;
     background-color: $text-color-4;
 
+    &:hover {
+      text-shadow: 0 0 1px $text-color;
+    }
+
     @include onTablet {
       width: 200px;
       height: 70px;
@@ -50,6 +54,10 @@
       font-family: "Montserrat", sans-serif;
 
       padding-left: 24px;
+
+      &:hover {
+        background-color: #f7f2f2;
+      }
 
       &::placeholder {
         color: $text-color-2;
@@ -77,9 +85,17 @@
     background-color: $border-color;
     border: 1px solid $border-color;
 
+    &:hover {
+      background-color: #1a493f;
+    }
+
     &--sign {
       background-color: $button-bgc-red;
       border-color: $button-bgc-red;
+
+      &:hover {
+        background-color: #ee301f;
+      }
     }
 
     @include onTablet {
