--- a/src/styles/block/footer.scss
+++ b/src/styles/block/footer.scss
@@ -28,6 +28,10 @@
     width: 57px;
     height: 61px;
     @include iconPosition;
+
+    &:hover {
+      transform: scale(1.05);
+    }
   }
 
   &__item {
@@ -42,6 +46,10 @@
 
   &__social-link {
     @include iconPosition;
+
+    &:hover {
+      transform: scale(1.1);
+    }
 
     &--fb {
       background-image: url(../images/icon/Facebook.svg);
@@ -83,6 +91,10 @@
   &__contacts {
     line-height: 150%;
     @include fontFooter;
+
+    &:hover {
+      text-shadow: 0 0 1px $text-color-2;
+    }
   }
 
   &__button-container {
@@ -140,8 +152,13 @@
   }
 
   &__link {
+    width: max-content;
     line-height: 100%;
     @include fontFooter;
+
+    &:hover {
+      text-shadow: 0 0 1px $text-color-2;
+    }
   }
 
   &__progect-contaner {
