--- a/src/styles/block/gallery.scss
+++ b/src/styles/block/gallery.scss
@@ -1,17 +1,20 @@
 .gallery {
   position: relative;
-  padding: 180px 20px 0;
+  padding: 180px 20px 100px;
 
   @include onTablet {
-    padding: 208px 34px 0;
+    padding: 208px 34px 92px;
   }
 
   @include onDesctop {
-    padding: 302px 55px 0;
+    padding: 302px 0 0;
   }
 
   &__title {
     @include theTitle;
+    @include onDesctop {
+      padding: 0 55px;
+    }
   }
 
   &__container {
@@ -19,14 +22,14 @@
     width: 100%;
     overflow: hidden;
 
-    padding: 40px 0 100px;
+    padding: 40px 0 0;
 
     @include onTablet {
-      padding: 48px 0 92px;
+      padding: 48px 0 0;
     }
 
     @include onDesctop {
-      padding: 56px 0 200px;
+      padding: 56px 55px 200px;
     }
   }
 }
