--- a/src/styles/block/header.scss
+++ b/src/styles/block/header.scss
@@ -53,7 +53,8 @@
     @include iconPosition;
 
     position: relative;
-    left: calc(50% - 47px);
+    left: 50%;
+    transform: translateX(-50%);
     top: 9px;
 
     @include onTablet {
