--- a/src/styles/block/menu.scss
+++ b/src/styles/block/menu.scss
@@ -1,5 +1,6 @@
 .menu {
   display: flex;
+  max-width: 1440px;
 
   background-color: $border-color;
   padding: 27px 20px;
@@ -55,6 +56,10 @@
     line-height: 150%;
     width: 100px;
     color: $text-color-4;
+
+    &:hover {
+      color: $dot-color;
+    }
 
     @include onDesctop {
       font-size: 22px;
