--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -4,6 +4,12 @@
   }
 }
 
+@mixin onTabletTitle {
+  @media (min-width: 700px) {
+    @content;
+  }
+}
+
 @mixin onDesctop {
   @media (min-width: 1280px) {
     @content;
