--- a/src/styles/block/page.scss
+++ b/src/styles/block/page.scss
@@ -10,6 +10,8 @@
     left: 0;
     right: 0;
 
+    margin: 0 auto;
+
     transform: translateY(-100%);
     transition: transform $transition-time;
 
