--- a/src/styles/block/slider.scss
+++ b/src/styles/block/slider.scss
@@ -48,16 +48,15 @@
 
   &__image {
     width: 20%;
-    max-height: 600px;
     transition: $transition-time;
-
-    &:hover {
-      transform: scale(105%);
-      transition: $transition-time;
-    }
 
     @include onDesctop {
       width: 100%;
+
+      &:hover {
+        transform: scale(105%);
+        transition: $transition-time;
+      }
     }
 
     &--tablet {
@@ -92,11 +91,14 @@
   &__img {
     width: 100%;
     height: 100%;
-    max-height: 600px;
     object-fit: contain;
 
-    @include onDesctop {
+    @include onTablet {
       object-fit: cover;
+    }
+
+    @include onDesctop {
+      object-fit: contain;
     }
   }
 
