--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -2,10 +2,10 @@
   height: 50px;
   width: 50px;
 
-  background-image: url(/images/arrow.svg);
   background-size: 8px 12px;
   background-position: center;
   background-repeat: no-repeat;
+  cursor: pointer;
 
   @include onTablet {
     height: 70px;
@@ -14,5 +14,11 @@
 
   &--first-type {
     background-color: $green-button-color;
+    background-image: url(/images/arrow.svg);
+  }
+
+  &--second-type {
+    background-color: $red-square-color;
+    background-image: url(/images/vector.svg);
   }
 }
