--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,5 @@
-@import "./utils/reset.scss";
+@import "./utils/reset";
+@import "./utils/normalize";
 @import "./utils/vars";
 @import "./utils/fonts";
 @import "./utils/typography";
@@ -20,3 +21,4 @@
 @import "./blocks/events.scss";
 @import "./blocks/classic-roman.scss";
 @import "./blocks/gallery.scss";
+@import "./blocks/subscription.scss";
