--- a/src/styles/blocks/information.scss
+++ b/src/styles/blocks/information.scss
@@ -6,7 +6,6 @@
     font-weight: 400;
     font-size: 14px;
     line-height: 20px;
-    color: $white-text-color;
   }
 
   &__content {
@@ -18,6 +17,18 @@
     @include onDesktop {
       gap: 0 30px;
     }
+
+    &--footer {
+      display: block;
+
+      @include onTablet {
+        height: 210px;
+      }
+
+      @include onDesktop {
+        height: auto;
+      }
+    }
   }
 
   &__list {
@@ -28,6 +39,11 @@
       width: 158px;
       margin: 0;
     }
+
+    &--footer-gap {
+      margin-bottom: 20px;
+      width: 100%;
+    }
   }
 
   &__item {
@@ -35,7 +51,6 @@
     font-weight: 400;
     font-size: 14px;
     line-height: 150%;
-    color: $white-text-color;
 
     &:nth-child(n) {
       &::before {
@@ -56,7 +71,6 @@
     font-weight: 400;
     font-size: 14px;
     line-height: 150%;
-    color: $white-text-color;
 
     &::before {
       content: "Вихідні: ";
@@ -65,6 +79,10 @@
 
     @include onTablet {
       width: 144px;
+    }
+
+    &--footer {
+      width: 100%;
     }
   }
 }
