--- a/src/styles/blocks/navigation.scss
+++ b/src/styles/blocks/navigation.scss
@@ -22,6 +22,18 @@
     @include onDesktop {
       width: 168px;
     }
+
+    &--size {
+      width: 130px;
+
+      @include onTablet {
+        width: 220px;
+      }
+
+      @include onDesktop {
+        width: 169px;
+      }
+    }
   }
 
   &__link {
@@ -34,6 +46,12 @@
 
     @include onDesktop {
       font-size: 22px;
+    }
+
+    &--footer {
+      font-size: 14px;
+      font-weight: 400;
+      color: $black-text-color;
     }
   }
 }
