--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,6 +11,7 @@
 @import "./blocks/information.scss";
 @import "./blocks/navigation.scss";
 @import "./blocks/grid.scss";
+@import "./blocks/contacts.scss";
 
 @import "./blocks/page.scss";
 @import "./blocks/header.scss";
@@ -22,3 +23,4 @@
 @import "./blocks/classic-roman.scss";
 @import "./blocks/gallery.scss";
 @import "./blocks/subscription.scss";
+@import "./blocks/footer.scss";
