--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -89,7 +89,11 @@
     }
 
     &:nth-of-type(4) {
-      margin-bottom: 0;
+      margin-bottom: 18px;
+
+      @include onTablet {
+        margin-bottom: 0;
+      }
     }
 
     &-title {
