--- a/src/styles/block/art-museum.scss
+++ b/src/styles/block/art-museum.scss
@@ -44,8 +44,8 @@
     text-transform: uppercase;
     transform: rotate(-90deg);
 
-    &:active {
-      color: $text-color-2;
+    &:hover {
+      text-shadow: 0 0 1px $text-color-2;
     }
 
     @include onDesctop {
