--- a/src/styles/block/menu.scss
+++ b/src/styles/block/menu.scss
@@ -1,16 +1,23 @@
 .menu {
-  display: flex;
   max-width: 1440px;
 
-  background-color: $border-color;
-  padding: 27px 20px;
+  &__section {
+    background-color: $border-color;
+    padding: 27px 20px;
 
-  @include  onTablet {
-    padding: 40px 34px;
-  }
+    @include onTablet {
+      padding: 40px 34px;
+    }
 
-  @include onDesctop {
-    padding: 40px 55px 48px;
+    @include onDesctop {
+      padding: 40px 55px 48px;
+    }
+
+    &--second {
+      height: 100vh;
+      padding: 0;
+      opacity: 50%;
+    }
   }
 
   &__top {
