added some changes

--- a/src/styles/blocks/art-museum.scss
+++ b/src/styles/blocks/art-museum.scss
@@ -38,6 +38,7 @@
     height: 50px;
     width: 280px;
     border: 1px solid $green-button-color;
+    text-decoration: none;
 
     @include onTablet {
       height: 70px;
