--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -28,6 +28,7 @@
     display: block;
     height: 210px;
     margin: 0 auto;
+    transition: transform 0.3s;
 
     @include onTablet {
       height: 520px;
@@ -35,6 +36,10 @@
 
     @include onDesktop {
       width: 100%;
+    }
+
+    &:hover {
+      transform: scale(1.1);
     }
   }
 
