--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -52,6 +52,11 @@
     display: block;
     width: 63px;
     height: 72px;
+
+    background-image: url(/images/logo2.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
   }
 
   &__share {
