--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -11,7 +11,6 @@
   &__photo {
     display: flex;
     width: min-content;
-    transition: transform 0.3s;
 
     @include onTablet {
       gap: 20px;
@@ -28,6 +27,7 @@
     display: block;
     width: 280px;
     height: 410px;
+    transition: transform 0.3s;
 
     @include onTablet {
       width: 340px;
@@ -43,6 +43,10 @@
       @include onDesktop {
         height: 360px;
       }
+    }
+
+    &:hover {
+      transform: scale(1.1);
     }
   }
 
