--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,11 @@
-$c-gray: #eee;
+$colorgreen: #1a5a4c;
+$colorlightgreen: #687480;
+$colorred: #f14a27;
+$size: 50px;
+$desktop: 70px;
+$icon: 13px;
+$colorwhite: #fff;
+$black:#0f0e08;
+$gray: #4e4e4e;
+$Rectangle_mobile: 10px;
+$Rectangle_desk: 15px;
