--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,13 @@
 @import "utils";
-@import "fonts";
-@import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "./blocks/page.scss";
+@import "./blocks/header.scss";
+@import "./blocks/icon.scss";
+@import "./blocks/container.scss";
+@import "./blocks/grid.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/link.scss";
+@import "./blocks/current-events.scss";
+@import "./blocks/galery.scss";
+@import "./blocks/classicism-to-romanticism.scss";
+@import "./blocks/subscription.scss";
+@import "./blocks/footer.scss";
