--- a/src/styles/blocks/classicism-to-romanticism.scss
+++ b/src/styles/blocks/classicism-to-romanticism.scss
@@ -5,6 +5,7 @@
   width: 100%;
   background-position: center;
   background-repeat: no-repeat;
+  background-size: cover;
   position: relative;
   @include onTablet {
     height: 390px;
