--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -11,6 +11,16 @@
     padding: 0 58px;
   }
 
+  &__header {
+    margin: 0 auto;
+    @include onTablet {
+      padding: 0 0 0 37px;
+    }
+    @include onDesktop {
+     padding: 0 0 0 55px;
+    }
+  }
+
   &__current-events {
     max-width: 1170px;
     margin: 0 auto;
@@ -18,7 +28,6 @@
   }
 
   &__classicism-to-romanticism {
-    max-width: 1170px;
     margin: 0 auto;
   }
 
