--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -58,9 +58,16 @@
     box-sizing: border-box;
     padding-bottom: 70px;
     gap: 20px;
+    @include onTablet {
+      gap: 75px;
+    }
+    @include onDesktop {
+      gap: 31px;
+    }
   }
 
   &__opening-horse {
+
     &--title {
       padding-bottom: 20px;
       @include sizing;
@@ -73,7 +80,7 @@
       width: 30vh;
       padding-bottom: 25px;
       @include onTablet {
-        width: 100%;
+        width: 50vh;
       }
       @include onDesktop {
         width: 30vh;
@@ -97,6 +104,7 @@
   }
 
   &__contacts {
+
     &--title {
       line-height: 140.62%;
       padding-bottom: 20px;
@@ -104,6 +112,9 @@
 
     &--text {
       line-height: 150%;
+      @include onTablet {
+        width: 50vh;
+      }
       @include onDesktop {
         width: 30vh;
       }
