--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -129,5 +129,35 @@
     justify-content: center;
     align-items: center;
     background-color: $colorgreen;
+    transition: all 0.3s;
+    &:hover {
+      background-color: #278b76;
+    }
+  }
+  &__events {
+    @include onMobile {
+      display: none;
+    }
+
+    @include onTablet {
+      display: none;
+    }
+    @include onDesktop {
+      display: flex;
+      flex-direction: row;
+      justify-content: start;
+      align-items: center;
+      gap: 20px;
+      transform-origin: 0 100%;
+      transform: rotate(90deg);
+      font-family: "IBM Plex Sans", sans-serif;
+      font-weight: 700;
+      font-size: 14px;
+      line-height: 100%;
+    }
+    &--line {
+      width: 70px;
+      border-bottom: 1px solid $colorgreen;
+    }
   }
 }
