--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -8,6 +8,7 @@
   background-image: url(../images/photos/subscribe.png);
   background-position: center;
   background-repeat: no-repeat;
+  background-size: cover;
   @include onTablet {
     height: 380px;
   }
@@ -115,5 +116,9 @@
     justify-content: center;
     align-items: center;
     background-color: $colorred;
+    transition: all 0.3s;
+    &:hover {
+      background-color: #f5755b;
+    }
   }
 }
