subscription block was created

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -16,20 +16,18 @@
     width: 370px;
     height: 380px;
   
-    margin-bottom: 100px;
-    margin-left: 63%;
-    padding: 20px 0;
+    position: relative;
+    top: 0;
+    left: 64%;
     background-image: url(../images/photo/museum690.png);
-    // background-position: top left;
   }
 
   @include onDesktop {
-    width: 720px;
+    width: 725px;
     height: 650px;
 
-    margin-left: 33%;
+    left: 50%;
     margin-bottom: 200px;
     background-image: url(../images/photo/museum1170.png);
-    // background-position: top left;
   }
 }
