--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -3,12 +3,16 @@
   height: 12px;
 
   &--menu {
+    position: absolute;
+    top: 30px;
+    left: 20px;
+
     background-image: url(../images/menu.svg);
 
     @include onTablet {
       position: absolute;
       top: 45px;
-      left: 45px;
+      left: 40px;
     }
 
     @include onDesktop {
@@ -17,6 +21,7 @@
   }
 
   &--close {
+    display: block;
     margin-top: 33px;
     height: 13px;
 
@@ -24,7 +29,11 @@
     background-repeat: no-repeat;
 
     @include onTablet {
-      margin-bottom: 167px;
+      margin-bottom: 160px;
+    }
+
+    @include onDesktop {
+      margin-bottom: 175px;
     }
   }
 }
