--- a/src/styles/blocks/swiper.scss
+++ b/src/styles/blocks/swiper.scss
@@ -1,7 +1,7 @@
 .swiper {
-  width: 100%;
-  padding: 88px 20px;
-  margin-bottom: 100px;
+  // width: 100%;
+  // padding: 88px 20px;
+  // margin-bottom: 100px;
 
   &-wrapper {
     gap: 30px;
@@ -17,10 +17,5 @@
     height: 9px;
 
     background-color: $green-color;
-  }
-
-  &-scrollbar {
-    height: 10px;
-    margin-bottom: 20px;
   }
 }
