--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -25,6 +25,11 @@
   &__image {
     width: 280px;
     height: 410px;
+    transition: transform, 0.5s;
+
+    &:hover {
+      transform: scale(1.1);
+    }
 
     @include onTablet {
       width: 340px;
