--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -1,5 +1,3 @@
-@import "../utils/mixins";
-
 .subscription {
   height: 386px;
   padding: 88px 20px;
@@ -43,26 +41,59 @@
     margin-bottom: 50px;
 
     @include onTablet {
-      width: 100%;
+      width: 460px;
     }
   }
 
-  &__form {
-    &::after {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: 180px;
-      @include smallOrange;
-      color: $square-color;
+  &__positional {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 50px;
+
+    @include onTablet {
+      margin-right: 70px;
     }
   }
 
   &__button {
-    box-sizing: border-box;
     width: 230px;
     height: 50px;
 
     padding: 18px 24px;
+
+    &:focus {
+      outline: none;
+      border: 2px solid $square-color;
+    }
+
+    @include onTablet {
+      width: 370px;
+      height: 70px;
+    }
+
+    @include onDesktop {
+      width: 470px;
+    }
+  }
+
+  &__sqaure {
+    position: absolute;
+    @include smallOrange;
+    border: none;
+    transition: transform, 0.5s;
+
+    &:hover {
+      transform: scale(1.1);
+    }
+
+    @include onTablet {
+      margin-left: 16px;
+      @include bigOrange;
+    }
+
+    @include onDesktop {
+      margin-left: 30px;
+    }
   }
 }
