--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -25,9 +25,17 @@
 @mixin smallOrange {
   width: 50px;
   height: 50px;
+  background-color: $square-color;
+  background-image: url(../images/Vector.svg);
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 @mixin bigOrange {
   width: 70px;
   height: 70px;
+  background-color: $square-color;
+  background-image: url(../images/Vector.svg);
+  background-position: center;
+  background-repeat: no-repeat;
 }
