--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -1,4 +1,5 @@
 .container {
+  max-width: 1170px;
   margin: 0 auto;
   @include onMobile {
     padding: 0;
@@ -7,10 +8,12 @@
     padding: 0 0 0 39px;
   }
   @include onDesktop {
+    max-height: 457px;
     padding: 0 58px;
   }
 
   &__header {
+    max-width: 1280px;
     margin: 0 auto;
     @include onTablet {
       padding: 0 0 0 37px;
@@ -27,6 +30,7 @@
   }
 
   &__classicism-to-romanticism {
+    max-width: 1280px;
     margin: 0 auto;
   }
 
