--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -1,7 +1,10 @@
 .footer {
   font-family: "IBM Plex Sans", sans-serif;
   color: $black;
+
   &__container {
+    max-width: 850px;
+
     display: flex;
     flex-direction: column;
     padding: 0 20px;
@@ -10,16 +13,26 @@
       flex-direction: row;
       padding: 0;
       margin-bottom: 120px;
-      gap: 20px;
+      gap: 45px;
     }
     @include onDesktop {
+      max-height: 478px;
       flex-direction: row;
       padding: 0;
       margin-bottom: 87px;
       gap: 137px;
     }
   }
+  &__block {
 
+    display: flex;
+    flex-direction: column;
+
+    @include onDesktop {
+      flex-direction: row;
+
+    }
+  }
   &__block-logo {
     display: flex;
     flex-direction: row;
@@ -43,15 +56,6 @@
     gap: 26px;
   }
 
-  &__block {
-    display: flex;
-    flex-direction: column;
-    @include onDesktop {
-      flex-direction: row;
-      margin-bottom: 87px;
-    }
-  }
-
   &__working-time {
     display: flex;
     flex-direction: row;
@@ -62,12 +66,19 @@
       gap: 75px;
     }
     @include onDesktop {
+      padding: 0;
       gap: 31px;
     }
   }
 
   &__opening-horse {
-
+    max-width: 130px;
+    @include onTablet {
+      max-width: 170px;
+    }
+    @include onDesktop {
+      max-width: 170px;
+    }
     &--title {
       padding-bottom: 20px;
       @include sizing;
@@ -77,24 +88,25 @@
     &--text {
       @include sizing;
       line-height: 150%;
-      width: 30vh;
+
       padding-bottom: 25px;
       @include onTablet {
         width: 50vh;
       }
       @include onDesktop {
-        width: 50vh;
+        width: 45vh;
       }
     }
 
     &--free-time {
+      max-width: 170px;
       @include sizing;
       line-height: 150%;
       @include onTablet {
         width: 50vh;
       }
       @include onDesktop {
-        width: 30vh;
+        width: 45vh;
       }
     }
 
@@ -104,7 +116,7 @@
   }
 
   &__contacts {
-
+    max-width: 170px;
     &--title {
       line-height: 140.62%;
       padding-bottom: 20px;
@@ -116,7 +128,7 @@
         width: 50vh;
       }
       @include onDesktop {
-        width: 50vh;
+        max-width: 170px;
       }
     }
   }
@@ -141,13 +153,17 @@
     @include onTablet {
       gap: 110px;
     }
+    @include onDesktop {
+      gap: 32px;
+    }
   }
 
   &__galery {
+    width: 170px;
     display: flex;
     flex-direction: column;
     gap: 20px;
-    width: 30vh;
+
   }
 
   &__contact {
