--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -22,22 +22,24 @@
   }
 
   &__top-content {
+    width: 160px;
     display: flex;
-    justify-content: start;
+    justify-content: space-between;
     align-items: center;
-    gap: 90px;
     padding-top: 9px;
     position: absolute;
     @include onMobile {
       padding-left: 23px;
     }
     @include onTablet {
-      gap: 400px;
+      width: 500px;
+      justify-content: space-between;
       padding-top: 15px;
       padding-left: 0;
     }
     @include onDesktop {
-      gap: 515px;
+      width: 640px;
+      justify-content: space-between;
       padding-top: 15px;
       padding-left: 0;
     }
