--- a/src/styles/blocks/link.scss
+++ b/src/styles/blocks/link.scss
@@ -14,5 +14,9 @@
     color: $black;
     font-family: "IBM Plex Sans", sans-serif;
     @include sizing;
+    transition: all 0.3s;
+    &:hover {
+      color: #f5755b;
+    }
   }
 }
