--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,4 +1,5 @@
 .menu {
+  max-width: 1435px;
   background-color: $colorgreen;
   height: 399px;
   padding: 27px 20px;
@@ -7,6 +8,7 @@
     padding: 39px 20px 0 0;
   }
   @include onDesktop {
+
     padding: 40px 0 0;
     height: 233px;
   }
