--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -178,6 +178,7 @@
     justify-content: center;
     align-items: center;
     gap: 10px;
+    padding-bottom: 35px;
 
     &--text {
       font-family: "IBM Plex Sans", sans-serif;
